<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/dAddMenuItem"
        android:orderInCategory="100"
        android:title="@string/VIEW_ADD_NAME"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dDeleteMenuItem"
        android:orderInCategory="100"
        android:title="@string/VIEW_DELETE_NAME"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dChangeLocalityMenuItem"
        android:orderInCategory="100"
        android:title="@string/VIEW_CHANGE_LOCALITY_NAME"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dActionMenuItem"
        android:orderInCategory="100"
        android:title="@string/VIEW_ACTION_NAME"
        app:showAsAction="never"/>

    <item
        android:id="@+id/dSignoutMenuItem"
        android:orderInCategory="100"
        android:title="@string/VIEW_SIGNOUT_NAME"
        app:showAsAction="never"/>

</menu>